--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,5 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Khand:wght@400;500;600;700&family=Nobile:wght@400;500;700&family=Overpass:wght@100;200;300;400;600;700;800;900&display=swap");
